# vasyan-desktop-notifier

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
src/vasyan_desktop_notifier/: __init__.py  beeper.py  cli.py  config.py  models.py  service.py
